<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mkyong</groupId>
	<artifactId>NumberGenerator</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>NumberGenerator</name>
	<url>http://maven.apache.org</url>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<properties>
		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
			<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
			<sonar.jacoco.reportPath>${root.project.dir}/jacoco.exec</sonar.jacoco.reportPath>
			<sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
			<sonar.web.javaOpts>-Xmx4g -Xms128m -XX:+UseConcMarkSweepGC -XX:-UseGCOverheadLimit</sonar.web.javaOpts>
			<sonar.ce.javaOpts>-Xmx6g -Xms128m -XX:+UseConcMarkSweepGC -XX:-UseGCOverheadLimit</sonar.ce.javaOpts>
			<test.args>-Xms256m -Xmx2g -XX:+UseConcMarkSweepGC -XX:-UseGCOverheadLimit</test.args>
    </properties>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>3.3.0.603</version>
            </plugin>
		</plugins>
	</build>

</project>
